Fixed: consistency issues on Upvoted content pages. - Showing votearrows again and fixed arrow alignment issue inside box. - Hiding rank until interaction.

--- a/src/_submission-lists.css
+++ b/src/_submission-lists.css
@@ -71,13 +71,4 @@ html[op="upvoted"] {
         padding: 0 !important;
         width: 0;
     }
-
-    .nosee {
-        display: none;
-    }
-
-    .rank {
-        opacity: 1 !important;
-    }
 }
-
