--- a/src/_votearrows.css
+++ b/src/_votearrows.css
@@ -23,6 +23,7 @@ a:has(.votearrow) {
     .votearrow {
         background-image: none;
         height: 100%;
+        margin: 0;
         width: 100%;
 
         &::before {
